2007-12-26  Roberto Majadas  <telemaco@openshine.com>

	* vapi/Makefile.am, vapi/liboobs-1.vapi, vapi/packages/liboobs-1/: add
	  liboobs-1 bindings

2007-12-26  Roberto Majadas  <telemaco@openshine.com>

	* vapi/packages/libgnome-menu/libgnome-menu.metadata: set
	  cheader_filename

	* vapi/libgnome-menu.vapi: regenerated

2007-12-24  Jürg Billeter  <j@bitron.ch>

	* vala/Makefile.am, vala/valainvalidtype.vala,
	  vala/valasemanticanalyzer.vala, gobject/valaccodegeneratormethod.vala:
	  add InvalidType class

2007-12-24  Jürg Billeter  <j@bitron.ch>

	* vapi/gtk+-2.0.vapi, vapi/packages/gtk+-2.0/: hide deprecated
	  GtkProgress class

2007-12-24  Jürg Billeter  <j@bitron.ch>

	* vala/valainterfacewriter.vala: fix writing delegate types

2007-12-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasymbolresolver.vala: fix void types with vapigen

2007-12-24  Jürg Billeter  <j@bitron.ch>

	* vapi/gio-2.0.vapi, vapi/packages/gio-2.0/: update to glib 2.15.0

2007-12-24  Jürg Billeter  <j@bitron.ch>

	* vala/valasignal.vala: fix interface signals

2007-12-22  Jürg Billeter  <j@bitron.ch>

	* vapigen/Makefile.am, gen-project/Makefile.am: build vapigen and
	  vala-gen-project with newly built valac

2007-12-20  Jürg Billeter  <j@bitron.ch>

	* vapi/libxml-2.0.vapi: add tree and xpath bindings, use pointers,
	  based on patch by Ondřej Jirman

2007-12-20  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/scanner.l, vala/valacodecontext.vala,
	  vala/valadatatype.vala, vala/valamemberaccess.vala,
	  vala/valapointertype.vala, vala/valasemanticanalyzer.vala,
	  gobject/valadbusbindingprovider.vala: add support for pointer member
	  access

2007-12-18  Jürg Billeter  <j@bitron.ch>

	* vapi/sqlite3.vapi: some enhancements to the SQLite bindings

2007-12-18  Jürg Billeter  <j@bitron.ch>

	* vala/parser.y, vala/valaattributeprocessor.vala,
	  vala/valaconstant.vala: support cname attribute for constants

2007-12-18  Jürg Billeter  <j@bitron.ch>
